--- a/client/src/index.css
+++ b/client/src/index.css
@@ -208,10 +208,10 @@ a.toc-link {
 }
 
 .mb-icon {
-  display: inline-block;  /* 设置span标签为块级元素 */
-  width: 16px;  /* 设置宽度 */
-  height: 16px;  /* 设置高度 */
+  display: inline-block;
+  width: 16px;
+  height: 16px;
   background-image: url("https://icp.gov.moe/images/ico64.png");
-  background-size: cover;  /* 设置背景图片尺寸 */
-  margin-top: 3px;
+  background-size: cover;
+  margin-top: 10px;
 }
