--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 /* cantarell-latin-400-normal */
 @font-face {
-  font-family: "Noto Sans SC","Cantarell", sans-serif;
+  font-family: "Cantarell";
   font-style: normal;
   font-display: auto;
   font-weight: 400;
@@ -17,7 +17,7 @@
 
 body {
   @apply bg-background-light dark:bg-background-dark text-gray-800;
-  font-family: Cantarell, "Source Han Serif CN VF" !important;
+  font-family: "Microsoft Yahei", "Source Han Serif CN VF",sans-serif !important;
 }
 
 textarea:focus {
@@ -26,7 +26,7 @@ textarea:focus {
 
 .wmde-markdown {
   @apply bg-w;
-  font-family: Cantarell, "Source Han Serif CN VF" !important;
+  font-family: "Microsoft Yahei", "Source Han Serif CN VF",sans-serif !important;
 }
 
 .w-md-editor {
